adding deletion of tickers in a watchlist

--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
-    <script src="https://unpkg.com/ag-grid-community/dist/ag-grid-community.min.js"></script>
+<!--    <script src="https://unpkg.com/ag-grid-community/dist/ag-grid-community.min.js"></script>-->
     <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
-    <script src="main.js"></script>
+<!--    <script src="main.js"></script>-->
     <style media="only screen">
       html, body, #root {
         height: 100%;
